[package]
name = "railmapgen"
version = "0.1.0"
description = ""
authors = ["thekingofcity", "chitowong"]
license = "GPL-3.0-only"
repository = "https://github.com/railmapgen/railmapgen.github.io/"
default-run = "railmapgen"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
resvg = "0.45.1"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Required for mobile release
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
